...
    <string name="descripción_traduccion">Funcionalidad Traducción: Selecciona esta
        funcionalidad para traducir el texto presente en una imagen al idioma que escojas entre los disponibles</string>
    <string name="nombre_funcionalidad_traduccion">Traducción</string>

    <string name="texto_dialog_title">Elige una modalidad</string>
    <string name="texto_dialog_cuerpo">¿Desea analizar una imagen de su galería o hacer una foto ahora?</string>
    <string name="texto_dialog_opcion_galeria">Galería</string>
    <string name="texto_dialog_opcion_camara">Cámara</string>
    <string name="texto_dialog_opcion_cancelar">Cancelar</string>
    <string name="imagen_placeholder_descripcion">Aquí aparecerá la imagen que desea analizar</string>
    <string name="texto_resultado">Resultado</string>
    <string name="permisos_no_concedidos">Se necesitan permisos para acceder a la cámara o al almacenamiento para hacer uso de esta funcionalidad</string>

    <string name="text_recognition_error">Se ha producido un error con el reconocimiento de texto</string>

    <string name="button_foto">Hacer foto</string>

...
    <string name="target_language">Traducir al</string>
    <string name="text_translation_error">Ha ocurrido un error durante la traducción del texto</string>
    <string name="translation_models_error">Se ha producido un error. Es posible que no se tengan los modelos de traducción necesarios. Asegurate de estar conectado a internet via WIFI para descargarlos.</string>

    <string name="logo_seeit">Logo SeeIt</string>
    <string name="access_advice">Inicia sesión para ver los registros de anteriores análisis</string>
    <string name="access_btn">Acceder</string>
    <string name="login_register_advice">Introduce su correo y contraseña y selecciona si desea iniciar sesión (si ya posee una cuenta), o registrarse si aún no tiene</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Contraseña</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="register_btn">Registrarse</string>
    <string name="email_empty">Introduce una dirección de correo</string>
    <string name="email_not_valid">Introduce una dirección de correo válida</string>
    <string name="password_empty">Introduce una contraseña</string>
    <string name="password_too_short">La contraseña debe tener al menos 6 caracteres</string>
    <string name="login_correct">Inicio de sesión correcto</string>
    <string name="login_error">Ha ocurrido un error durante el inicio de sesión</string>
...
