...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.tfg.ui.funcionalidades.CategoriasActivity">

    <View
        android:id="@+id/category_plants_view"
        android:layout_width="144dp"
        android:layout_height="142dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:contentDescription="@string/category_plants_description"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_birds_view" />

    <ImageView
        android:id="@+id/category_plants_img"
        android:layout_width="96dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="@+id/category_plants_view"
...
    <TextView
        android:id="@+id/category_insects_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_insects"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/category_insects_view"
        app:layout_constraintEnd_toEndOf="@+id/category_insects_view"
        app:layout_constraintStart_toStartOf="@+id/category_insects_view"
        app:layout_constraintTop_toBottomOf="@+id/category_insects_img" />

    <ImageView
        android:id="@+id/category_insects_img"
...
        android:clickable="true"
        android:contentDescription="@string/category_insects_description"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/category_plants_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_food_view" />

    <TextView
        android:id="@+id/category_plants_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_plants"
...
